pod-security-cel/baseline/disallow-host-process/disallow-host-process.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-host-process
  annotations:
    policies.kyverno.io/title: Disallow hostProcess in CEL expressions
    policies.kyverno.io/category: PSS Baseline (Git Policyset) in CEL
    policies.kyverno.io/severity: medium
    policies.kyverno.io/subject: Pod
    policies.kyverno.io/minversion: 1.11.0
    kyverno.io/kubernetes-version: "1.26-1.27"
    policies.kyverno.io/description: >-
      Windows pods offer the ability to run HostProcess containers which enables privileged
      access to the Windows node. Privileged access to the host is disallowed in the baseline
      policy. HostProcess pods are an alpha feature as of Kubernetes v1.22. This policy ensures
      the `hostProcess` field, if present, is set to `false`.
spec:
  validationFailureAction: Audit
  background: true
  rules:
    - name: host-process-containers
      match:
        any:
        - resources:
            kinds:
              - Pod
      validate:
        cel:
          expressions:
            - expression: >- 
                object.spec.containers.all(container, !has(container.securityContext) ||
                !has(container.securityContext.windowsOptions) ||
                !has(container.securityContext.windowsOptions.hostProcess) ||
                container.securityContext.windowsOptions.hostProcess == false)
              message: >-
                HostProcess containers are disallowed. The field spec.containers[*].securityContext.windowsOptions.hostProcess
                must either be undefined or set to `false`.

            - expression: >- 
                !has(object.spec.initContainers) ||
                object.spec.initContainers.all(container, !has(container.securityContext) ||
                !has(container.securityContext.windowsOptions) ||
                !has(container.securityContext.windowsOptions.hostProcess) ||
                container.securityContext.windowsOptions.hostProcess == false)
              message: >-
                HostProcess containers are disallowed. The field spec.initContainers[*].securityContext.windowsOptions.hostProcess
                must either be undefined or set to `false`.

            - expression: >- 
                !has(object.spec.ephemeralContainers) ||
                object.spec.ephemeralContainers.all(container, !has(container.securityContext) ||
                !has(container.securityContext.windowsOptions) ||
                !has(container.securityContext.windowsOptions.hostProcess) ||
                container.securityContext.windowsOptions.hostProcess == false)
              message: >-
                HostProcess containers are disallowed. The field spec.ephemeralContainers[*].securityContext.windowsOptions.hostProcess
                must either be undefined or set to `false`.
